[gd_scene load_steps=16 format=3 uid="uid://dsyakl5yoxx8d"]

[ext_resource type="Script" path="res://scripts/slime_simple.gd" id="1_xt2jx"]
[ext_resource type="Texture2D" uid="uid://c14waahdgucam" path="res://assets/sprites/slime_green.png" id="2_jv8af"]
[ext_resource type="PackedScene" uid="uid://ba78272pqwtmf" path="res://scenes/killzone.tscn" id="3_bsnmq"]
[ext_resource type="AudioStream" uid="uid://dqnwo8d1ljeel" path="res://assets/sounds/hurt.wav" id="5_gi4xn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1opcb"]
atlas = ExtResource("2_jv8af")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5n6u"]
atlas = ExtResource("2_jv8af")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd3c3"]
atlas = ExtResource("2_jv8af")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkfm2"]
atlas = ExtResource("2_jv8af")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hiave"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1opcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5n6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd3c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkfm2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0uc4"]
size = Vector2(8, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfoj8"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdejn"]
size = Vector2(20, 6)

[sub_resource type="Animation" id="Animation_78y6f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DestroyZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSlimeSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cx1g3"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Killzone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DestroyZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeadSlimeSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k7yyc"]
_data = {
"RESET": SubResource("Animation_78y6f"),
"destroy": SubResource("Animation_cx1g3")
}

[node name="Slime" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_xt2jx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_hiave")
autoplay = "default"
frame = 3
frame_progress = 0.995695

[node name="SlimeCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_b0uc4")

[node name="Killzone" parent="." instance=ExtResource("3_bsnmq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_gfoj8")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(9, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(10, -7)
target_position = Vector2(0, 15)

[node name="DestroyZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyZone"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_jdejn")

[node name="DeadSlimeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_gi4xn")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k7yyc")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(1, -9)
scale = Vector2(9.8, 9)

[connection signal="body_entered" from="DestroyZone" to="." method="_on_destroy_zone_body_entered"]
